--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   adapter: postgresql
   database: tictactoe_test
   host: localhost
@@ -23,3 +23,6 @@ production:
   database: tictactoe_prod
   host: localhost
 
+
+cucumber:
+  <<: *test
